// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/drafts/draft_actions should fetch members when member count is 0 for GM 1`] = `
<div>
  To: 
  <div
    class="DraftTitle__group-icon"
  >
    0
  </div>
   
  <span>
    Test Channel
  </span>
</div>
`;

exports[`components/drafts/draft_actions should match snapshot 1`] = `
<div>
  In: 
  <i
    class="icon icon-globe"
  />
   
  <span>
    Test Channel
  </span>
</div>
`;

exports[`components/drafts/draft_actions should match snapshot for DM channel 1`] = `
<div>
  To: 
  <img
    alt="user profile image"
    class="Avatar Avatar-xs DraftTitle__avatar"
    loading="lazy"
    src="/api/v4/users/undefined/image?_=0"
  />
   
  <span>
    Test Channel
  </span>
</div>
`;

exports[`components/drafts/draft_actions should match snapshot for DM channel with teammate 1`] = `
<div>
  To: 
  <img
    alt="username profile image"
    class="Avatar Avatar-xs DraftTitle__avatar"
    loading="lazy"
    src="/api/v4/users/id/image?_=1000"
  />
   
  <span>
    Test Channel
  </span>
</div>
`;

exports[`components/drafts/draft_actions should match snapshot for GM channel 1`] = `
<div>
  To: 
  <div
    class="DraftTitle__group-icon"
  >
    5
  </div>
   
  <span>
    Test Channel
  </span>
</div>
`;

exports[`components/drafts/draft_actions should match snapshot for open channel 1`] = `
<div>
  In: 
  <i
    class="icon icon-globe"
  />
   
  <span>
    Test Channel
  </span>
</div>
`;

exports[`components/drafts/draft_actions should match snapshot for private channel 1`] = `
<div>
  In: 
  <i
    class="icon icon-lock-outline"
  />
   
  <span>
    Test Channel
  </span>
</div>
`;

exports[`components/drafts/draft_actions should match snapshot for self draft 1`] = `
<div>
  In: 
  <i
    class="icon icon-globe"
  />
   
  <span>
    Test Channel
  </span>
   
  (you)
</div>
`;

exports[`components/drafts/draft_actions should match snapshot for thread 1`] = `
<div>
  Thread in: 
  <i
    class="icon icon-globe"
  />
   
  <span>
    Test Channel
  </span>
</div>
`;
